# scratchdev

./: LICENSE  README.md
dmcetarget/: CMakeLists.txt  dmce-probe.sh  main.cpp
locks/: CMakeLists.txt  main.cpp
lttngtest/: CMakeLists.txt  cscope.out  lttngtest.sh  main.cpp
lttngtest/submodule/: CMakeLists.txt  submodule.cpp  submodule.h
move/: CMakeLists.txt  main.cpp
sandbox/: CMakeLists.txt  main.cpp
sharedmem/: build.sh  consumer.c  producer.c  test.sh
signal/: build  signal.c
simple/: build  simple.c
smartp/: main.cpp  makefile
system/: build.sh  system.c
